--- a/produtos.css
+++ b/produtos.css
@@ -1,12 +1,12 @@
 header {
-	background: #BBBBBB;
+	background: #A0522D;
 	padding: 20px 0;
 }
 
 .caixa {
 	position: relative;
 	width: 940px;
-	margin: 0 auto;
+	margin: 10 auto;
 }
 
 .tamanho{
@@ -21,7 +21,7 @@ nav {
 
 nav li {
 	display: inline;
-	margin: 0 0 0 15px;
+	margin: 10px 3px 10px 3px;
 }
 
 nav a {
